<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="codex_message_edit">Edit message</string>
    <string name="codex_message_retry">Regenerate response</string>
</resources>
